--- a/src/css/general.css
+++ b/src/css/general.css
@@ -124,6 +124,7 @@ main-header > div {
 
 #container {
 	display: grid;
+	overflow-x: hidden;
 }
 
 .metapackage {
